test-apps/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: blue.nginx.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-deploy-blue
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: green.nginx.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
        path: /
        pathType: Prefix
